--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
                   </path>
                 </svg>
               </div>
-              <p class="intro_text">Meow.
-                I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil, 
-                all I do is sleep and try to help out hoomans with their projects whenever 
-                they need me.
+              <p class="intro_text">Hello!
+                I am a beginner QA Engineer, seeking a full-time position. With great attention to details and open to new opportunities.
               </p>
             </div>
           </div>
