Update skills and tools

--- a/index.html
+++ b/index.html
@@ -94,8 +94,16 @@
         <div class="container">
           <div class="resume__block">
             <div class="skills">
-              <h3 class="skills__header">Skills</h3>
-              <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+              <h3 class="skills__header">Skills & Tools</h3>
+              <ul class="skills__text">
+                <li>Writing and maintaining test documentation in Confluence</li>
+                <li>Writing test cases and bug tracking in Jira</li>
+                <li>Test execution</li>
+                <li>Basic database skills (SQL)</li>
+                <li>Basic knowledge of HTML/CSS</li>
+                <li>Basics of working in Postman</li>
+                <li>Analytical thinking</li>
+              </ul>
             </div>
           </div>
         </div>
