--- a/index.html
+++ b/index.html
@@ -115,18 +115,55 @@
                 <h3 class="experiences__header">Experience</h3>
                 <div class="experiences__company">
                   <div class="experiences__company-header">
-                    <span class="experiences__company-header-durability">For whole my life</span>
-                    <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                    <span class="experiences__company-header-durability">September 2019 - April 2020</span>
+                    <h3 class="experiences__company-header-name">Nestle Ukraine</h3>
                   </div>
-              
                   <div class="experiences__company-project">
-                    <span class="experiences__company-project-role">Binary Studio Cat</span>
-                    <h3 class="experiences__company-project-name">Hooman project</h3>
+                    <h3 class="experiences__company-project-role">Regional Analyst</h3>                    
                     <ul class="experiences__company-project-responsibilities">
-                      <li>Supported hoomans</li>
-                      <li>Slept all the time</li>
-                      <li>Lied on the keyboard</li>
-                      <li>Watched my hoomans working</li>
+                      <li>Updating reports</li>
+                      <li>Division of budgets between distributors</li>
+                      <li>Monitoring compliance with the terms of the recommendations</li>
+                      <li>Monitoring compliance with the terms of the recommendations</li>
+                      <li>Collecting team needs for products/equipment</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability">March 2017 - June 2019</span>
+                    <h3 class="experiences__company-header-name">Idea Bank</h3>
+                  </div>
+                  <div class="experiences__company-project">
+                    <h3 class="experiences__company-project-role">Problem debt specialist</h3>                    
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Creation of normative documents</li>
+                      <li>Preparation of presentations/technical tasks</li>
+                      <li>Conclusion of contracts with partners</li>
+                      <li>Ensuring payment of bills</li>
+                      <li>Updating bases for partners</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability">May 2017 - December 2018</span>
+                    <h3 class="experiences__company-header-name"> New finance service</h3>
+                  </div>
+                  <div class="experiences__company-project">
+                    <h3 class="experiences__company-project-role">Problem debt specialist</h3>                    
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Creation of normative documents</li>
+                      <li>Preparation of presentations/technical tasks</li>
+                      <li>Ensuring payment of bills</li>
+                      <li>Formation of statistics on SMS/telephone calls</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability">November 2016 - February 2017</span>
+                    <h3 class="experiences__company-header-name">Bank Trust</h3>
+                  </div>
+                  <div class="experiences__company-project">
+                    <h3 class="experiences__company-project-role">Sales manager</h3>                    
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Formation of credit documents</li>
+                      <li>Opening/closing of credit cards</li>
                     </ul>
                   </div>
                 </div>
@@ -136,22 +173,50 @@
                 <div class="additional-info__education">
                   <h3 class="additional-info__education-header">Education</h3>
                   <div class="additional-info__education-university">
-                    <span class="additional-info__education-university-durability">2021</span>
-                    <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                    <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                    <span class="additional-info__education-university-durability">2012-2016</span>
+                    <h3 class="additional-info__education-university-speciality">Bachelor in Finance and Credit</h3>
+                    <p class="additional-info__education-university-name">Ivan Franko National University of Lviv</p>
+                  </div>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability">2016-2018</span>
+                    <h3 class="additional-info__education-university-speciality">Master in Finance, Banking and Insurance</h3>
+                    <p class="additional-info__education-university-name">Ivan Franko National University of Lviv</p>
+                  </div>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability">2014-2016</span>
+                    <h3 class="additional-info__education-university-speciality">Student of Mechanics and mathematics faculty</h3>
+                    <p class="additional-info__education-university-name">Ivan Franko National University of Lviv</p>
+                  </div>
+                </div>
+                <div class="additional-info__education">
+                  <h3 class="additional-info__education-header">Courses</h3>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability">September 2018 - June 2019</span>
+                    <h3 class="additional-info__education-university-speciality">English course</h3>
+                    <p class="additional-info__education-university-name">Green Forest, Lviv</p>
+                  </div>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability">March 2019</span>
+                    <h3 class="additional-info__education-university-speciality">Techniques of successful communications</h3>
+                    <p class="additional-info__education-university-name">Global Education Business System, Kyiv</p>
+                  </div>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability">December 2021 - June 2022</span>
+                    <h3 class="additional-info__education-university-speciality">Manual QA Engineer</h3>
+                    <p class="additional-info__education-university-name">IT Step Academy, Lviv</p>
                   </div>
                 </div>
               
                 <div class="additional-info__languages">
                   <h3 class="additional-info__languages-header">Languages</h3>
                   <p class="additional-info__languages-item">
-                    Meow dialect
+                    Ukrainian (Native)
                   </p>
                   <p class="additional-info__languages-item">
-                    Ukrainian (understand)
+                    English (Upper-intermediate)
                   </p>
                   <p class="additional-info__languages-item">
-                    English (don't understand)
+                    German (Elementary)
                   </p>
                 </div>
               </div>
